# GraphBoard

./: .gitignore  Makefile  README.md  docker-compose.yml  schema.graphql
.github/workflows/: ci.yml
apps/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml
apps/api/app/: __init__.py  config.py  context.py  database.py  loaders.py  main.py  models.py  schema.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 20260718_0001_initial.py
apps/api/tests/: test_schema.py
apps/web/: Dockerfile  codegen.ts  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/nginx/: default.conf
apps/web/src/: App.vue  main.ts  styles.css
apps/web/src/graphql/: generated.ts  operations.test.ts  operations.ts
docs/: architecture.md  roadmap.md
