[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "graphboard-api"
version = "0.1.0"
description = "GraphBoard GraphQL API"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13,<2",
  "asyncpg>=0.29,<1",
  "fastapi>=0.115,<1",
  "pydantic-settings>=2.5,<3",
  "sqlalchemy[asyncio]>=2.0,<3",
  "strawberry-graphql[fastapi]>=0.320,<1",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.20,<1",
  "httpx>=0.27,<1",
  "mypy>=1.11,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.7,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["migrations*", "tests*"]
